Tutorial: Create personal blog with Github

--- a/_includes/default.html
+++ b/_includes/default.html
@@ -21,6 +21,7 @@
 	<link href="{{ site.BASE_PATH }}/assets/resources/font-awesome/css/font-awesome.min.css" rel="stylesheet">
 	<link href="{{ site.BASE_PATH }}/assets/resources/syntax/syntax.css" rel="stylesheet">
 	<link href="{{ site.BASE_PATH }}/assets/css/style.css" rel="stylesheet">
+	<link rel="shortcut icon" href="http://faviconist.com/icons/64f9e6234d5037a21d0f7a896295843c/favicon.ico" />
 
 	<!-- Le fav and touch icons -->
 	<!-- Update these with your own images
