--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,7 @@
 @import url(http://fonts.googleapis.com/css?family=Ubuntu:500&subset=latin,latin-ext);
+@import url(http://fonts.googleapis.com/css?family=Roboto+Slab:400,300);
+@import url(http://fonts.googleapis.com/css?family=Lato|Lustria);
+@import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro);
 
 body{
 	color: #2c3e50;
@@ -93,6 +96,14 @@ article{
 .article_body{
 	margin-top: 20px;
 	margin-bottom: 20px;
+}
+
+.article_body p {
+	font-family: 'Roboto Slab', 'Georgia', serif;
+	font-weight: 300;
+	font-size: 18px;
+	margin-bottom: 27px;
+	line-height: 1.7em;
 }
 
 .post-date {
