--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
-@import url(http://fonts.googleapis.com/css?family=Ubuntu:500&subset=latin,latin-ext);
-@import url(http://fonts.googleapis.com/css?family=Roboto+Slab:400,300);
-@import url(http://fonts.googleapis.com/css?family=Lato|Lustria);
-@import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro);
+@import url(https://fonts.googleapis.com/css?family=Ubuntu:500&subset=latin,latin-ext);
+@import url(https://fonts.googleapis.com/css?family=Roboto+Slab:400,300);
+@import url(https://fonts.googleapis.com/css?family=Lato|Lustria);
+@import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro);
 
 body{
 	color: #2c3e50;
